bluegreen/new-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-app-active
  namespace: default
spec:
  selector:
    app: new-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: new-app-preview
  namespace: default
spec:
  selector:
    app: new-app
  ports:
    - port: 80
      targetPort: 80
