bluegreen/new-app-ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-app-preview-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - host: preview.new-app.hyukjin.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: new-app-preview
            port:
              number: 80
