bluegreen/new-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - host: new-app.hyukjin.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: new-app-active
            port:
              number: 80
